--- a/style.css
+++ b/style.css
@@ -23,3 +23,50 @@ body{
     padding-top: 10px;
     font-size: 25px;
 }
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 1;
+    display: none;
+}
+
+#img-overlay {
+    max-width: 80%;
+    max-height: 80%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+}
+#overlay-button {
+    position: fixed;
+    top: calc(50% + 40%);
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 3;
+    padding: 10px 15px;
+    background-color: #fff;
+    border: 1px solid #333;
+    border-radius: 5px;
+    cursor: pointer;
+}
+#btn{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px 15px;
+    background-color: #fff;
+    border: 1px solid #333;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    z-index: 2;
+    transition: all 0.2s ease;
+}
