--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     background-image: url(./img/cork.png)
 }
 
-#pin{
+.pin{
     position:absolute;
     top: -15px;
     left: 50%;
@@ -44,6 +44,7 @@ body{
     transform: translate(-50%, -50%);
     z-index: 2;
 }
+
 #overlay-button {
     position: fixed;
     top: calc(50% + 40%);
@@ -56,17 +57,14 @@ body{
     border-radius: 5px;
     cursor: pointer;
 }
-#btn{
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 10px 15px;
-    background-color: #fff;
-    border: 1px solid #333;
-    border-radius: 5px;
+
+.card:hover{
+    transform: scale(1.05) rotate(10deg);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.3);
+    transition: 0.5s;
     cursor: pointer;
-    font-weight: bold;
-    z-index: 2;
-    transition: all 0.2s ease;
+}
+
+.ov-box button{
+    margin-top: 10px;
 }
