--- a/style.css
+++ b/style.css
@@ -58,6 +58,15 @@ body{
     cursor: pointer;
 }
 
+.ov-box{
+    background-color: rgba(0,0,0,0.3);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
 .card:hover{
     transform: scale(1.05) rotate(10deg);
     box-shadow: 0 10px 20px rgba(0,0,0,0.3);
